# kubecfg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_new.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml
kpet/: __main__.py  config.py
kpet/cli/: curl.py  get.py  main.py  show.py
kubecfg/: __main__.py  config.py
kubecfg/cli/: curl.py  get.py  main.py  ping.py  show.py
tests/: test_version.py
