[metadata]
name = kpet
description = Python library and cli utility to check k8s client configurations
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/kpet
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    kpet = kpet.__main__:app_main
